# trino-hive-docker

./: deploy.sh  hosts.ini  jupyter_server_config.json  playbook.yml  pyproject.toml
docker-compose/: docker-compose.yml
docker-compose/metastore/: Dockerfile
docker-compose/spark/: Dockerfile
