[tool.poetry]
name = "trino-hive-docker"
version = "0.1.0"
description = ""
authors = ["Emmanuel <kipronofb@outlook.com>"]
readme = "README.md"
packages = [{include = "trino_hive_docker"}]

[tool.poetry.dependencies]
python = "^3.11"
ansible = "^9.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
